[gd_scene load_steps=8 format=3 uid="uid://dlwkuo2pvi6sr"]

[ext_resource type="Script" path="res://scenes/game_over_menu.gd" id="1_fdoa8"]
[ext_resource type="FontFile" uid="uid://r5ttqaxnuvgk" path="res://assets/MaldiniBold.ttf" id="1_kr0h4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_780dm"]
skew = Vector2(0.1, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.258824, 0.227451, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_color = Color(0, 0, 0, 0.87451)
shadow_size = 15
shadow_offset = Vector2(10, 10)
anti_aliasing_size = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_2bcf5"]
font = ExtResource("1_kr0h4")
font_size = 50
outline_size = 1
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.772549)

[sub_resource type="Animation" id="Animation_5al7r"]
resource_name = "blink"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.737255, 1, 0.121569, 1), Color(0.490196, 1, 0.121569, 1)]
}

[sub_resource type="Animation" id="Animation_jsv5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.737255, 1, 0.121569, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2iqe4"]
_data = {
"RESET": SubResource("Animation_jsv5p"),
"blink": SubResource("Animation_5al7r")
}

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_fdoa8")

[node name="GameOverPanel" type="Panel" parent="."]
modulate = Color(0.937255, 0.0980392, 0.0980392, 1)
custom_minimum_size = Vector2(400, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_780dm")

[node name="ResultLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 12.0
offset_right = 116.0
offset_bottom = 79.0
grow_horizontal = 2
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_2bcf5")
horizontal_alignment = 1
vertical_alignment = 2

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -5.0
offset_right = 129.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.737255, 1, 0.121569, 1)
theme_override_fonts/font = ExtResource("1_kr0h4")
theme_override_font_sizes/font_size = 52
toggle_mode = true
text = "Play Again"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverPanel/RestartButton"]
libraries = {
"": SubResource("AnimationLibrary_2iqe4")
}
autoplay = "blink"

[connection signal="button_down" from="GameOverPanel/RestartButton" to="." method="_on_restart_button_button_down"]
